--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   font-family: "Ubuntu", sans-serif;
   font-style: normal;
-  transition: 200ms;
+  /* transition: 200ms; */
   scroll-behavior: smooth;
   cursor: url("./images/normal.cur"), auto;
 }
@@ -35,8 +35,8 @@ body {
   filter: drop-shadow(0rem 0rem 2rem #54d2d49e);
 }
 
-.hidden-buttons{
+.hidden-buttons {
   display: grid;
   opacity: 0;
-  transition: .4s ease-in-out;
+  transition: 0.4s ease-in-out;
 }
