--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   font-family: "Ubuntu", sans-serif;
   font-style: normal;
-  /* transition: 200ms; */
+  transition: 200ms;
   scroll-behavior: smooth;
   cursor: url("./images/normal.cur"), auto;
 }
